deploy/k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ai-course
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  template:
    metadata:
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: SERVER_PORT
              value: "9000"
          image: ray2/course-gateway:latest
          name: course-gateway
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always
