deploy/k8s/pgsql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ai-course
    io.kompose.service: pgsql
  name: pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgsql
  strategy:
    type: Recreate
  template:
    metadata:

      labels:
        io.kompose.service: pgsql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: scheduler
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  name: course-configmap
                  key: DB_PASSWORD
            - name: POSTGRES_USER
              value: postgres
          image: bitnami/postgresql:17
          name: pgsql
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-data
            - mountPath: /docker-entrypoint-initdb.d
              name: pgsql-init-scripts
      restartPolicy: Always
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName: pg-data
        - name: pgsql-init-scripts
          hostPath:
            path: /home/ubuntu/deploy/init-scripts
            type: Directory
