deploy/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ai-course
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - env:
          - name: DB_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: course-configmap
                key: DB_PASSWORD
          command: ["redis-server"]
          args: ["--requirepass", "$(DB_PASSWORD)"]
          image: redis:7-alpine
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
