deploy/k8s/algorithm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-course
    io.kompose.service: algorithm
  name: algorithm
spec:
  ports:
    - name: "9002"
      port: 9002
      targetPort: 9002
  selector:
    io.kompose.service: algorithm
