deploy/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-course
    io.kompose.service: auth
  name: auth
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: auth
