deploy/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-course
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: gateway
