deploy/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-course
    io.kompose.service: nginx
  name: nginx
spec:
  type: NodePort
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: "443"
      port: 443
      targetPort: 443
      nodePort: 30000
  selector:
    io.kompose.service: nginx
