deploy/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-course
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
