deploy/k8s/scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ai-course
    io.kompose.service: scheduler
  name: scheduler
spec:
  ports:
    - name: "9003"
      port: 9003
      targetPort: 9003
  selector:
    io.kompose.service: scheduler
